--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<nav>
-  <p>Password Manager</p>
-  <ul>
+<div class="container text-center">
+  <nav>
+    <h1>Password Manager</h1>
     @if(authService.isLoggedIn()) {
-      <li>
-        <a (click)="logout()" class="nav-link">Logout</a>
-      </li>
+      <button class="btn btn-primary" (click)="logout()">Logout</button>
     } @else {
-      <li><a routerLink="/register" class="nav-link">Register</a></li>
-      <li><a routerLink="/login" class="nav-link">Login</a></li>
+      <button class="btn btn-primary" routerLink="/login">Login</button>
+      <button class="btn btn-primary" routerLink="/register">Register</button>
     }
-  </ul>
-</nav>
-<router-outlet></router-outlet>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
