--- a/src/app/credential-form/credential-form.component.html
+++ b/src/app/credential-form/credential-form.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="credentialForm" (ngSubmit)="onSubmit()">
   <div>
-    <label for="name">Name</label>
-    <input id="name" formControlName="name" type="text" />
+    <label class="form-label" for="name">Name</label>
+    <input class="form-control" id="name" formControlName="name" type="text" />
   </div>
-  <div>
-    <label for="password">Password</label>
-    <input id="password" formControlName="password" type="text" />
+  <div class="mb-3 mt-3">
+    <label class="form-label" for="password">Password</label>
+    <input class="form-control" id="password" formControlName="password" type="text" />
   </div>
-  <button type="submit">Update</button>
+  <button class="btn btn-primary" type="submit">Submit</button>
 </form>
