--- a/src/app/credential-item/credential-item.component.html
+++ b/src/app/credential-item/credential-item.component.html
@@ -1,4 +1,6 @@
-<h2>{{ credential.name }}</h2>
-<p>{{ credential.password }}</p>
-<button (click)="updateCredential(credential)">Update</button>
-<button (click)="deleteCredential(credential)">Delete</button>
+<div class="card">
+  <h2>{{ credential.name }}</h2>
+  <p>{{ credential.password }}</p>
+  <button class="btn btn-primary" (click)="updateCredential(credential)">Update</button>
+  <button class="btn btn-danger" (click)="deleteCredential(credential)">Delete</button>
+</div>
