--- a/src/app/credentials/credentials.component.html
+++ b/src/app/credentials/credentials.component.html
@@ -1,4 +1,3 @@
-<h1>Password Manager</h1>
 <app-credential-item *ngFor="let credential of credentials" [credential]="credential"></app-credential-item>
 <br>
-<button (click)="addNewCredential()">Add New Credentials</button>
+<button class="btn btn-primary" (click)="addNewCredential()">Add New Credentials</button>
